src/nanovg.h

typedef struct NVGcontext NVGcontext;
struct NVGcolor {
	union {
		float rgba[4];
		struct {
			float r,g,b,a;
		};
	};
};
typedef struct NVGcolor NVGcolor;
struct NVGpaint {
	float xform[6];
	float extent[2];
	float radius;
	float feather;
	NVGcolor innerColor;
	NVGcolor outerColor;
	int image;
};
typedef struct NVGpaint NVGpaint;
enum NVGwinding {
	NVG_CCW = 1,			
	NVG_CW = 2,				
};
enum NVGsolidity {
	NVG_SOLID = 1,			
	NVG_HOLE = 2,			
};
enum NVGlineCap {
	NVG_BUTT,
	NVG_ROUND,
	NVG_SQUARE,
	NVG_BEVEL,
	NVG_MITER,
};
enum NVGalign {
	NVG_ALIGN_LEFT 		= 1<<0,	
	NVG_ALIGN_CENTER 	= 1<<1,	
	NVG_ALIGN_RIGHT 	= 1<<2,	
	NVG_ALIGN_TOP 		= 1<<3,	
	NVG_ALIGN_MIDDLE	= 1<<4,	
	NVG_ALIGN_BOTTOM	= 1<<5,	
	NVG_ALIGN_BASELINE	= 1<<6, 
};
enum NVGblendFactor {
	NVG_ZERO = 1<<0,
	NVG_ONE = 1<<1,
	NVG_SRC_COLOR = 1<<2,
	NVG_ONE_MINUS_SRC_COLOR = 1<<3,
	NVG_DST_COLOR = 1<<4,
	NVG_ONE_MINUS_DST_COLOR = 1<<5,
	NVG_SRC_ALPHA = 1<<6,
	NVG_ONE_MINUS_SRC_ALPHA = 1<<7,
	NVG_DST_ALPHA = 1<<8,
	NVG_ONE_MINUS_DST_ALPHA = 1<<9,
	NVG_SRC_ALPHA_SATURATE = 1<<10,
};
enum NVGcompositeOperation {
	NVG_SOURCE_OVER,
	NVG_SOURCE_IN,
	NVG_SOURCE_OUT,
	NVG_ATOP,
	NVG_DESTINATION_OVER,
	NVG_DESTINATION_IN,
	NVG_DESTINATION_OUT,
	NVG_DESTINATION_ATOP,
	NVG_LIGHTER,
	NVG_COPY,
	NVG_XOR,
};
struct NVGcompositeOperationState {
	int srcRGB;
	int dstRGB;
	int srcAlpha;
	int dstAlpha;
};
typedef struct NVGcompositeOperationState NVGcompositeOperationState;
struct NVGglyphPosition {
	const char* str;	
	float x;			
	float minx, maxx;	
};
typedef struct NVGglyphPosition NVGglyphPosition;
struct NVGtextRow {
	const char* start;	
	const char* end;	
	const char* next;	
	float width;		
	float minx, maxx;	
};
typedef struct NVGtextRow NVGtextRow;
enum NVGimageFlags {
    NVG_IMAGE_GENERATE_MIPMAPS	= 1<<0,     
	NVG_IMAGE_REPEATX			= 1<<1,		
	NVG_IMAGE_REPEATY			= 1<<2,		
	NVG_IMAGE_FLIPY				= 1<<3,		
	NVG_IMAGE_PREMULTIPLIED		= 1<<4,		
	NVG_IMAGE_NEAREST			= 1<<5,		
};
extern NVG_EXPORT void nvgBeginFrame(NVGcontext* ctx, float windowWidth, float windowHeight, float devicePixelRatio);
extern NVG_EXPORT void nvgCancelFrame(NVGcontext* ctx);
extern NVG_EXPORT void nvgEndFrame(NVGcontext* ctx);
extern NVG_EXPORT void nvgGlobalCompositeOperation(NVGcontext* ctx, int op);
extern NVG_EXPORT void nvgGlobalCompositeBlendFunc(NVGcontext* ctx, int sfactor, int dfactor);
extern NVG_EXPORT void nvgGlobalCompositeBlendFuncSeparate(NVGcontext* ctx, int srcRGB, int dstRGB, int srcAlpha, int dstAlpha);
extern NVG_EXPORT NVGcolor nvgRGB(unsigned char r, unsigned char g, unsigned char b);
extern NVG_EXPORT NVGcolor nvgRGBf(float r, float g, float b);
extern NVG_EXPORT NVGcolor nvgRGBA(unsigned char r, unsigned char g, unsigned char b, unsigned char a);
extern NVG_EXPORT NVGcolor nvgRGBAf(float r, float g, float b, float a);
extern NVG_EXPORT NVGcolor nvgLerpRGBA(NVGcolor c0, NVGcolor c1, float u);
extern NVG_EXPORT NVGcolor nvgTransRGBA(NVGcolor c0, unsigned char a);
extern NVG_EXPORT NVGcolor nvgTransRGBAf(NVGcolor c0, float a);
extern NVG_EXPORT NVGcolor nvgHSL(float h, float s, float l);
extern NVG_EXPORT NVGcolor nvgHSLA(float h, float s, float l, unsigned char a);
extern NVG_EXPORT void nvgSave(NVGcontext* ctx);
extern NVG_EXPORT void nvgRestore(NVGcontext* ctx);
extern NVG_EXPORT void nvgReset(NVGcontext* ctx);
extern NVG_EXPORT void nvgShapeAntiAlias(NVGcontext* ctx, int enabled);
extern NVG_EXPORT void nvgStrokeColor(NVGcontext* ctx, NVGcolor color);
extern NVG_EXPORT void nvgStrokePaint(NVGcontext* ctx, NVGpaint paint);
extern NVG_EXPORT void nvgFillColor(NVGcontext* ctx, NVGcolor color);
extern NVG_EXPORT void nvgFillPaint(NVGcontext* ctx, NVGpaint paint);
extern NVG_EXPORT void nvgMiterLimit(NVGcontext* ctx, float limit);
extern NVG_EXPORT void nvgStrokeWidth(NVGcontext* ctx, float size);
extern NVG_EXPORT void nvgLineCap(NVGcontext* ctx, int cap);
extern NVG_EXPORT void nvgLineJoin(NVGcontext* ctx, int join);
extern NVG_EXPORT void nvgGlobalAlpha(NVGcontext* ctx, float alpha);
extern NVG_EXPORT void nvgResetTransform(NVGcontext* ctx);
extern NVG_EXPORT void nvgTransform(NVGcontext* ctx, float a, float b, float c, float d, float e, float f);
extern NVG_EXPORT void nvgTranslate(NVGcontext* ctx, float x, float y);
extern NVG_EXPORT void nvgRotate(NVGcontext* ctx, float angle);
extern NVG_EXPORT void nvgSkewX(NVGcontext* ctx, float angle);
extern NVG_EXPORT void nvgSkewY(NVGcontext* ctx, float angle);
extern NVG_EXPORT void nvgScale(NVGcontext* ctx, float x, float y);
extern NVG_EXPORT void nvgCurrentTransform(NVGcontext* ctx, float* xform);
extern NVG_EXPORT void nvgTransformIdentity(float* dst);
extern NVG_EXPORT void nvgTransformTranslate(float* dst, float tx, float ty);
extern NVG_EXPORT void nvgTransformScale(float* dst, float sx, float sy);
extern NVG_EXPORT void nvgTransformRotate(float* dst, float a);
extern NVG_EXPORT void nvgTransformSkewX(float* dst, float a);
extern NVG_EXPORT void nvgTransformSkewY(float* dst, float a);
extern NVG_EXPORT void nvgTransformMultiply(float* dst, const float* src);
extern NVG_EXPORT void nvgTransformPremultiply(float* dst, const float* src);
extern NVG_EXPORT int nvgTransformInverse(float* dst, const float* src);
extern NVG_EXPORT void nvgTransformPoint(float* dstx, float* dsty, const float* xform, float srcx, float srcy);
extern NVG_EXPORT float nvgDegToRad(float deg);
extern NVG_EXPORT float nvgRadToDeg(float rad);
extern NVG_EXPORT int nvgCreateImage(NVGcontext* ctx, const char* filename, int imageFlags);
extern NVG_EXPORT int nvgCreateImageMem(NVGcontext* ctx, int imageFlags, unsigned char* data, int ndata);
extern NVG_EXPORT int nvgCreateImageRGBA(NVGcontext* ctx, int w, int h, int imageFlags, const unsigned char* data);
int nvgCreateImageAlpha(NVGcontext* ctx, int w, int h, int imageFlags, const unsigned char* data);
extern NVG_EXPORT void nvgUpdateImage(NVGcontext* ctx, int image, const unsigned char* data);
extern NVG_EXPORT void nvgImageSize(NVGcontext* ctx, int image, int* w, int* h);
extern NVG_EXPORT void nvgDeleteImage(NVGcontext* ctx, int image);
extern NVG_EXPORT NVGpaint nvgLinearGradient(NVGcontext* ctx, float sx, float sy, float ex, float ey,
											 NVGcolor icol, NVGcolor ocol);
extern NVG_EXPORT NVGpaint nvgBoxGradient(NVGcontext* ctx, float x, float y, float w, float h,
										  float r, float f, NVGcolor icol, NVGcolor ocol);
extern NVG_EXPORT NVGpaint nvgRadialGradient(NVGcontext* ctx, float cx, float cy, float inr, float outr,
										     NVGcolor icol, NVGcolor ocol);
extern NVG_EXPORT NVGpaint nvgImagePattern(NVGcontext* ctx, float ox, float oy, float ex, float ey,
										  float angle, int image, float alpha);
extern NVG_EXPORT void nvgScissor(NVGcontext* ctx, float x, float y, float w, float h);
extern NVG_EXPORT void nvgIntersectScissor(NVGcontext* ctx, float x, float y, float w, float h);
extern NVG_EXPORT void nvgResetScissor(NVGcontext* ctx);
extern NVG_EXPORT void nvgBeginPath(NVGcontext* ctx);
extern NVG_EXPORT void nvgMoveTo(NVGcontext* ctx, float x, float y);
extern NVG_EXPORT void nvgLineTo(NVGcontext* ctx, float x, float y);
extern NVG_EXPORT void nvgBezierTo(NVGcontext* ctx, float c1x, float c1y, float c2x, float c2y, float x, float y);
extern NVG_EXPORT void nvgQuadTo(NVGcontext* ctx, float cx, float cy, float x, float y);
extern NVG_EXPORT void nvgArcTo(NVGcontext* ctx, float x1, float y1, float x2, float y2, float radius);
extern NVG_EXPORT void nvgClosePath(NVGcontext* ctx);
extern NVG_EXPORT void nvgPathWinding(NVGcontext* ctx, int dir);
extern NVG_EXPORT void nvgArc(NVGcontext* ctx, float cx, float cy, float r, float a0, float a1, int dir);
void nvgBarc(NVGcontext* ctx, float cx, float cy, float r, float a0, float a1, int dir, int join);
extern NVG_EXPORT void nvgRect(NVGcontext* ctx, float x, float y, float w, float h);
extern NVG_EXPORT void nvgRoundedRect(NVGcontext* ctx, float x, float y, float w, float h, float r);
extern NVG_EXPORT void nvgRoundedRectVarying(NVGcontext* ctx, float x, float y, float w, float h, float radTopLeft, float radTopRight, float radBottomRight, float radBottomLeft);
extern NVG_EXPORT void nvgEllipse(NVGcontext* ctx, float cx, float cy, float rx, float ry);
extern NVG_EXPORT void nvgCircle(NVGcontext* ctx, float cx, float cy, float r);
extern NVG_EXPORT void nvgFill(NVGcontext* ctx);
extern NVG_EXPORT void nvgStroke(NVGcontext* ctx);
extern NVG_EXPORT int nvgCreateFont(NVGcontext* ctx, const char* name, const char* filename);
extern NVG_EXPORT int nvgCreateFontAtIndex(NVGcontext* ctx, const char* name, const char* filename, const int fontIndex);
extern NVG_EXPORT int nvgCreateFontMem(NVGcontext* ctx, const char* name, unsigned char* data, int ndata, int freeData);
extern NVG_EXPORT int nvgCreateFontMemAtIndex(NVGcontext* ctx, const char* name, unsigned char* data, int ndata, int freeData, const int fontIndex);
extern NVG_EXPORT int nvgFindFont(NVGcontext* ctx, const char* name);
extern NVG_EXPORT int nvgAddFallbackFontId(NVGcontext* ctx, int baseFont, int fallbackFont);
extern NVG_EXPORT int nvgAddFallbackFont(NVGcontext* ctx, const char* baseFont, const char* fallbackFont);
extern NVG_EXPORT void nvgResetFallbackFontsId(NVGcontext* ctx, int baseFont);
extern NVG_EXPORT void nvgResetFallbackFonts(NVGcontext* ctx, const char* baseFont);
extern NVG_EXPORT void nvgFontSize(NVGcontext* ctx, float size);
extern NVG_EXPORT void nvgFontBlur(NVGcontext* ctx, float blur);
extern NVG_EXPORT void nvgTextLetterSpacing(NVGcontext* ctx, float spacing);
extern NVG_EXPORT void nvgTextLineHeight(NVGcontext* ctx, float lineHeight);
extern NVG_EXPORT void nvgTextAlign(NVGcontext* ctx, int align);
extern NVG_EXPORT void nvgFontFaceId(NVGcontext* ctx, int font);
extern NVG_EXPORT void nvgFontFace(NVGcontext* ctx, const char* font);
extern NVG_EXPORT float nvgText(NVGcontext* ctx, float x, float y, const char* string, const char* end);
extern NVG_EXPORT void nvgTextBox(NVGcontext* ctx, float x, float y, float breakRowWidth, const char* string, const char* end);
extern NVG_EXPORT float nvgTextBounds(NVGcontext* ctx, float x, float y, const char* string, const char* end, float* bounds);
extern NVG_EXPORT void nvgTextBoxBounds(NVGcontext* ctx, float x, float y, float breakRowWidth, const char* string, const char* end, float* bounds);
extern NVG_EXPORT int nvgTextGlyphPositions(NVGcontext* ctx, float x, float y, const char* string, const char* end, NVGglyphPosition* positions, int maxPositions);
extern NVG_EXPORT void nvgTextMetrics(NVGcontext* ctx, float* ascender, float* descender, float* lineh);
extern NVG_EXPORT int nvgTextBreakLines(NVGcontext* ctx, const char* string, const char* end, float breakRowWidth, NVGtextRow* rows, int maxRows);
enum NVGtexture {
	NVG_TEXTURE_ALPHA = 0x01,
	NVG_TEXTURE_RGBA = 0x02,
};
struct NVGscissor {
	float xform[6];
	float extent[2];
};
typedef struct NVGscissor NVGscissor;
struct NVGvertex {
	float x,y,u,v;
};
typedef struct NVGvertex NVGvertex;
struct NVGpath {
	int first;
	int count;
	unsigned char closed;
	int nbevel;
	NVGvertex* fill;
	int nfill;
	NVGvertex* stroke;
	int nstroke;
	int winding;
	int convex;
};
typedef struct NVGpath NVGpath;
struct NVGparams {
	void* userPtr;
	int edgeAntiAlias;
	int (*renderCreate)(void* uptr);
	int (*renderCreateTexture)(void* uptr, int type, int w, int h, int imageFlags, const unsigned char* data);
	int (*renderDeleteTexture)(void* uptr, int image);
	int (*renderUpdateTexture)(void* uptr, int image, int x, int y, int w, int h, const unsigned char* data);
	int (*renderGetTextureSize)(void* uptr, int image, int* w, int* h);
	void (*renderViewport)(void* uptr, float width, float height, float devicePixelRatio);
	void (*renderCancel)(void* uptr);
	void (*renderFlush)(void* uptr);
	void (*renderFill)(void* uptr, NVGpaint* paint, NVGcompositeOperationState compositeOperation, NVGscissor* scissor, float fringe, const float* bounds, const NVGpath* paths, int npaths);
	void (*renderStroke)(void* uptr, NVGpaint* paint, NVGcompositeOperationState compositeOperation, NVGscissor* scissor, float fringe, float strokeWidth, const NVGpath* paths, int npaths);
	void (*renderTriangles)(void* uptr, NVGpaint* paint, NVGcompositeOperationState compositeOperation, NVGscissor* scissor, const NVGvertex* verts, int nverts, float fringe);
	void (*renderDelete)(void* uptr);
};
typedef struct NVGparams NVGparams;
NVGcontext* nvgCreateInternal(NVGparams* params);
void nvgDeleteInternal(NVGcontext* ctx);
NVGparams* nvgInternalParams(NVGcontext* ctx);
void nvgDebugDumpPathCache(NVGcontext* ctx);